Update with comments and article style writing

--- a/Q3_folder/Q3_LeakyReLU.ipynb
+++ b/Q3_folder/Q3_LeakyReLU.ipynb
@@ -8,11 +8,14 @@
     "# Q3: Effect of Activation Functions on CNN Performance  \n",
     "## Experiment: LeakyReLU Activation\n",
     "\n",
-    "This notebook investigates how the **LeakyReLU activation function** affects the\n",
-    "performance of a convolutional neural network on the Fashion-MNIST dataset.\n",
+    "This experiment evaluates the impact of the **LeakyReLU activation function** on the\n",
+    "training dynamics and classification performance of a Convolutional Neural Network\n",
+    "(CNN) applied to the Fashion-MNIST dataset.\n",
     "\n",
-    "The architecture, dataset, optimiser and training procedure are kept identical\n",
-    "to other experiments (ReLU, Tanh and Sigmoid) to ensure a fair comparison.\n"
+    "To ensure a **fair and controlled comparison**, all experimental conditions\n",
+    "(network architecture, optimiser, learning rate, dataset split, and number of epochs)\n",
+    "are kept identical to the ReLU, Sigmoid, and Tanh experiments.\n",
+    "Only the activation function differs between models.\n"
    ]
   },
   {
@@ -22,22 +25,27 @@
    "source": [
     "## Experimental Setup\n",
     "\n",
-    "- Dataset: Fashion-MNIST (10 classes)\n",
-    "- Input size: 28 × 28 grayscale images\n",
-    "- Architecture:\n",
-    "  - Conv2D (1 → 8), kernel size 3\n",
-    "  - MaxPooling (2 × 2)\n",
-    "  - Conv2D (8 → 16), kernel size 3\n",
-    "  - MaxPooling (2 × 2)\n",
-    "  - Fully connected layer (128 units)\n",
-    "  - Output layer (10 units)\n",
-    "- Loss function: CrossEntropyLoss\n",
-    "- Optimizer: Adam\n",
-    "- Learning rate: 0.01\n",
-    "- Epochs: 20\n",
-    "- Train/validation split: 80% / 20%\n",
+    "- **Dataset:** Fashion-MNIST (10 classes)\n",
+    "- **Input:** 28 × 28 grayscale images\n",
+    "- **Train / Validation split:** 80% / 20%\n",
     "\n",
-    "Only the **activation function** differs between experiments.\n"
+    "### CNN Architecture\n",
+    "- Conv2D: 1 → 8 filters, kernel size 3\n",
+    "- MaxPooling: 2 × 2\n",
+    "- Conv2D: 8 → 16 filters, kernel size 3\n",
+    "- MaxPooling: 2 × 2\n",
+    "- Fully connected layer: 128 units\n",
+    "- Output layer: 10 units\n",
+    "\n",
+    "### Training Configuration\n",
+    "- **Activation function:** LeakyReLU\n",
+    "- **Loss function:** CrossEntropyLoss\n",
+    "- **Optimiser:** Adam\n",
+    "- **Learning rate:** 0.01\n",
+    "- **Epochs:** 20\n",
+    "\n",
+    "All hyperparameters and architectural choices are consistent across activation\n",
+    "function experiments to isolate the effect of the activation function itself.\n"
    ]
   },
   {
@@ -243,6 +251,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "035d0cc9-279c-41c4-89e4-3af96ac98de5",
+   "metadata": {},
+   "source": [
+    "## Model Architecture with LeakyReLU\n",
+    "\n",
+    "LeakyReLU is used after each convolutional and fully connected layer (except the output).\n",
+    "Unlike standard ReLU, LeakyReLU allows a small, non-zero gradient for negative inputs,\n",
+    "which helps mitigate the *dying ReLU* problem and improves gradient flow during training.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "dd332669-5efa-4a01-b1c6-10ac0f66adb5",
@@ -437,15 +457,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 37,
    "id": "3066a5a2-e37f-413f-ae2f-94d00a3e116d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-18T22:52:22.660881Z",
-     "iopub.status.busy": "2025-12-18T22:52:22.660079Z",
-     "iopub.status.idle": "2025-12-18T22:52:28.259078Z",
-     "shell.execute_reply": "2025-12-18T22:52:28.248146Z",
-     "shell.execute_reply.started": "2025-12-18T22:52:22.660820Z"
+     "iopub.execute_input": "2025-12-18T23:16:35.501862Z",
+     "iopub.status.busy": "2025-12-18T23:16:35.500659Z",
+     "iopub.status.idle": "2025-12-18T23:16:37.401060Z",
+     "shell.execute_reply": "2025-12-18T23:16:37.399042Z",
+     "shell.execute_reply.started": "2025-12-18T23:16:35.501766Z"
     },
     "tags": []
    },
@@ -488,17 +508,55 @@
    "id": "93b70f20-630c-49a6-ac5b-587056543b55",
    "metadata": {},
    "source": [
-    "## Results: Leaky ReLU Activation\n",
+    "## Training and Validation Performance\n",
     "\n",
-    "Leaky ReLU improves gradient flow for negative inputs and avoids dead neurons.\n",
-    "The model performs significantly better than Sigmoid but slightly worse than\n",
-    "standard ReLU in this experiment."
+    "The training and validation loss curves show a consistent downward trend,\n",
+    "indicating stable learning and effective optimisation.\n",
+    "\n",
+    "Validation accuracy increases steadily across epochs, reaching approximately **75%**\n",
+    "by epoch 20. This suggests that the model generalises well to unseen validation data\n",
+    "and does not suffer from severe overfitting.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5a308ab-7b66-41a8-bac6-06a419239a5a",
+   "metadata": {},
+   "source": [
+    "## Comparison with Other Activation Functions\n",
+    "\n",
+    "When compared to ReLU and Sigmoid models trained under identical conditions:\n",
+    "\n",
+    "- **LeakyReLU** demonstrates smoother convergence and more stable gradients.\n",
+    "- It achieves higher validation accuracy than Sigmoid, which often suffers from\n",
+    "  vanishing gradients in deeper networks.\n",
+    "- Compared to standard ReLU, LeakyReLU reduces the risk of inactive neurons and\n",
+    "  maintains learning even for negative activations.\n",
+    "\n",
+    "Overall, LeakyReLU provides a strong balance between training stability and\n",
+    "classification performance in this CNN architecture.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e533e01-0e8a-404e-855b-a8306e4bf3d3",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "This experiment shows that LeakyReLU is an effective activation function for CNNs\n",
+    "trained on Fashion-MNIST. Its ability to preserve gradient flow for negative inputs\n",
+    "results in faster convergence and improved validation accuracy compared to Sigmoid,\n",
+    "and slightly more stable training than standard ReLU.\n",
+    "\n",
+    "These findings highlight the importance of activation function choice in deep\n",
+    "learning model performance.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a689868-fe97-485e-ac6b-9ef06edc5b4a",
+   "id": "dc7cd2c9-be1b-4f08-832b-0dd7ffcb59c7",
    "metadata": {},
    "outputs": [],
    "source": []
