--- a/Q3_folder/Q3_ReLU.ipynb
+++ b/Q3_folder/Q3_ReLU.ipynb
@@ -8,11 +8,12 @@
     "# Q3: Effect of Activation Functions on CNN Performance  \n",
     "## Experiment: ReLU Activation\n",
     "\n",
-    "This notebook investigates how the **LeakyReLU activation function** affects the\n",
-    "performance of a convolutional neural network on the Fashion-MNIST dataset.\n",
+    "This notebook investigates how the **ReLU (Rectified Linear Unit)** activation function\n",
+    "affects the performance of a convolutional neural network (CNN) on the Fashion-MNIST dataset.\n",
     "\n",
-    "The architecture, dataset, optimiser and training procedure are kept identical\n",
-    "to other experiments (LeakyReLU, Sigmoid and Tanh) to ensure a fair comparison."
+    "To ensure a fair comparison, the dataset, network architecture, optimiser, learning rate,\n",
+    "and training procedure are kept identical to the other Q3 experiments\n",
+    "(LeakyReLU, Sigmoid, and Tanh). Only the activation function differs.\n"
    ]
   },
   {
@@ -22,20 +23,26 @@
    "source": [
     "## Experimental Setup\n",
     "\n",
-    "- Dataset: Fashion-MNIST (10 classes)\n",
-    "- Input size: 28 × 28 grayscale images\n",
-    "- Architecture:\n",
-    "  - Conv2D (1 → 8), kernel size 3\n",
-    "  - MaxPooling (2 × 2)\n",
-    "  - Conv2D (8 → 16), kernel size 3\n",
-    "  - MaxPooling (2 × 2)\n",
-    "  - Fully connected layer (128 units)\n",
-    "  - Output layer (10 units)\n",
-    "- Loss function: CrossEntropyLoss\n",
-    "- Optimizer: Adam\n",
-    "- Learning rate: 0.01\n",
-    "- Epochs: 20\n",
-    "- Train/validation split: 80% / 20%\n",
+    "- **Dataset:** Fashion-MNIST (10 classes)\n",
+    "- **Input:** 28 × 28 grayscale images\n",
+    "- **Train / Validation split:** 80% / 20%\n",
+    "\n",
+    "### CNN Architecture\n",
+    "- Conv2D: 1 → 8 channels, kernel size 3\n",
+    "- ReLU activation\n",
+    "- MaxPooling: 2 × 2\n",
+    "- Conv2D: 8 → 16 channels, kernel size 3\n",
+    "- ReLU activation\n",
+    "- MaxPooling: 2 × 2\n",
+    "- Fully connected layer: 128 units\n",
+    "- ReLU activation\n",
+    "- Output layer: 10 units\n",
+    "\n",
+    "### Training Configuration\n",
+    "- **Loss function:** CrossEntropyLoss\n",
+    "- **Optimiser:** Adam\n",
+    "- **Learning rate:** 0.01\n",
+    "- **Epochs:** 20\n",
     "\n",
     "Only the **activation function** differs between experiments.\n"
    ]
@@ -243,6 +250,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3139f146-4082-4684-b1ad-b49da4d5cea1",
+   "metadata": {},
+   "source": [
+    "## CNN Model with ReLU Activation\n",
+    "\n",
+    "The CNN below uses ReLU activations after each convolutional layer and the first\n",
+    "fully connected layer. This matches the architecture used in the other activation\n",
+    "function experiments, allowing a direct comparison of learning behaviour and accuracy.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 92,
    "id": "6ccee803-1ad5-4865-ae1a-c0326b06b865",
@@ -282,6 +301,18 @@
     "\n",
     "        x = self.activation(self.fc1(x))\n",
     "        return self.fc2(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70e75ca3-bf3c-4c66-bbb3-a4b690fb7fee",
+   "metadata": {},
+   "source": [
+    "## Training Procedure\n",
+    "\n",
+    "The model is trained for 20 epochs using the Adam optimiser.\n",
+    "During training, both loss and accuracy are recorded for the\n",
+    "training and validation sets at each epoch.\n"
    ]
   },
   {
@@ -484,16 +515,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5c33bc52-b5d6-4c27-a40f-9f75c7978baf",
+   "metadata": {},
+   "source": [
+    "## Results\n",
+    "\n",
+    "The following plots show the training and validation loss and accuracy\n",
+    "over the 20 training epochs.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "af3e563d-f7f2-4f02-a73b-3f74aabe5a2d",
    "metadata": {},
    "source": [
-    "## Results: ReLU Activation\n",
+    "## Discussion\n",
     "\n",
-    "The ReLU-activated network converges rapidly and achieves the highest\n",
-    "validation accuracy among all tested activation functions.\n",
+    "ReLU enables faster convergence compared to sigmoid-based activations\n",
+    "due to its non-saturating behaviour for positive inputs.\n",
     "\n",
-    "Training loss decreases steadily, indicating stable gradient flow and effective\n",
-    "feature learning."
+    "From the results, the model reaches a final validation accuracy of approximately **72%**.\n",
+    "The loss decreases steadily across epochs, indicating stable learning.\n",
+    "Minor fluctuations in validation accuracy are expected due to stochastic optimisation.\n",
+    "\n",
+    "These results will be compared directly with LeakyReLU, Sigmoid, and Tanh\n",
+    "in the final Q3 comparison.\n"
    ]
   },
   {
