--- a/Q3_folder/Q3_Sigmoid.ipynb
+++ b/Q3_folder/Q3_Sigmoid.ipynb
@@ -9,44 +9,58 @@
     "## Experiment: Sigmoid Activation\n",
     "\n",
     "This notebook investigates how the **Sigmoid activation function** affects the\n",
-    "performance of a convolutional neural network on the Fashion-MNIST dataset.\n",
+    "performance of a Convolutional Neural Network (CNN) on the Fashion-MNIST dataset.\n",
     "\n",
-    "The architecture, dataset, optimiser and training procedure are kept identical\n",
-    "to other experiments (ReLU, Tanh and Leaky ReLU) to ensure a fair comparison."
+    "The goal of this experiment is to understand whether Sigmoid is suitable for\n",
+    "deep convolutional architectures and to compare its behaviour with ReLU and\n",
+    "LeakyReLU models trained under identical conditions.\n",
+    "\n",
+    "To ensure a **fair and controlled comparison**, all experimental settings\n",
+    "(dataset, architecture, optimiser, learning rate, batch size, and number of\n",
+    "epochs) are kept constant. The **only variable** changed is the activation\n",
+    "function."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a5f5a5b9-2201-417c-b495-47b22ad61cb3",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2025-12-18T17:06:51.953452Z",
-     "iopub.status.busy": "2025-12-18T17:06:51.952499Z",
-     "iopub.status.idle": "2025-12-18T17:06:51.971862Z",
-     "shell.execute_reply": "2025-12-18T17:06:51.968730Z",
-     "shell.execute_reply.started": "2025-12-18T17:06:51.953387Z"
-    },
-    "tags": []
-   },
+   "id": "ad18f8dd-cb01-40c4-8cb0-665bac562047",
+   "metadata": {},
    "source": [
     "## Experimental Setup\n",
     "\n",
-    "- Dataset: Fashion-MNIST (10 classes)\n",
-    "- Input size: 28 × 28 grayscale images\n",
-    "- Architecture:\n",
-    "  - Conv2D (1 → 8), kernel size 3\n",
-    "  - MaxPooling (2 × 2)\n",
-    "  - Conv2D (8 → 16), kernel size 3\n",
-    "  - MaxPooling (2 × 2)\n",
-    "  - Fully connected layer (128 units)\n",
-    "  - Output layer (10 units)\n",
-    "- Loss function: CrossEntropyLoss\n",
-    "- Optimizer: Adam\n",
-    "- Learning rate: 0.01\n",
-    "- Epochs: 20\n",
-    "- Train/validation split: 80% / 20%\n",
+    "- **Dataset:** Fashion-MNIST (10 classes)\n",
+    "- **Input:** 28 × 28 grayscale images\n",
+    "- **Train / Validation split:** 80% / 20%\n",
     "\n",
-    "Only the **activation function** differs between experiments."
+    "### CNN Architecture\n",
+    "- Conv2D: 1 → 8 filters, kernel size 3\n",
+    "- MaxPooling: 2 × 2\n",
+    "- Conv2D: 8 → 16 filters, kernel size 3\n",
+    "- MaxPooling: 2 × 2\n",
+    "- Fully connected layer: 128 units\n",
+    "- Output layer: 10 units\n",
+    "\n",
+    "### Training Configuration\n",
+    "- **Activation function:** LeakyReLU\n",
+    "- **Loss function:** CrossEntropyLoss\n",
+    "- **Optimiser:** Adam\n",
+    "- **Learning rate:** 0.01\n",
+    "- **Epochs:** 20\n",
+    "\n",
+    "All hyperparameters and architectural choices are consistent across activation\n",
+    "function experiments to isolate the effect of the activation function itself.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a028329-9e77-48d4-b843-f72028f77846",
+   "metadata": {},
+   "source": [
+    "## Imports and Setup\n",
+    "\n",
+    "We import PyTorch, supporting libraries, and helper functions defined in\n",
+    "`functions.py`. These helper functions are shared across Q1, Q2, and Q3 to\n",
+    "ensure consistency and reproducibility.\n"
    ]
   },
   {
@@ -76,6 +90,18 @@
     "from torch.utils.data import TensorDataset, DataLoader\n",
     "\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb2b369b-9964-4c0b-b401-fe8691160da3",
+   "metadata": {},
+   "source": [
+    "## Dataset: Fashion-MNIST\n",
+    "\n",
+    "Fashion-MNIST consists of 28×28 grayscale images across 10 clothing categories.\n",
+    "It is a commonly used benchmark dataset for image classification and is\n",
+    "well-suited for analysing CNN behaviour.\n"
    ]
   },
   {
@@ -111,6 +137,18 @@
     "\n",
     "print(\"Train shape:\", X_train.shape)\n",
     "print(\"Validation shape:\", X_val.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11d0db57-7450-4afc-82bf-70e58d1bf5fb",
+   "metadata": {},
+   "source": [
+    "## Data Preparation\n",
+    "\n",
+    "The data is converted into PyTorch tensors and loaded using `DataLoader`.\n",
+    "Mini-batch training improves optimisation stability and reflects standard\n",
+    "deep learning practice.\n"
    ]
   },
   {
@@ -253,6 +291,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8ade367b-37e4-42c1-8e1b-3fbf6335e8d8",
+   "metadata": {},
+   "source": [
+    "## CNN Architecture with Sigmoid Activation\n",
+    "\n",
+    "This CNN architecture matches the models used in the ReLU and LeakyReLU\n",
+    "experiments. Sigmoid activation is applied after each convolutional layer\n",
+    "and the first fully connected layer.\n",
+    "\n",
+    "The output layer does not apply an activation function, as\n",
+    "`CrossEntropyLoss` expects raw logits.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 38,
    "id": "0d7e7ac6-a62f-4f24-a09d-b3cc56ed32f5",
@@ -290,6 +343,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a26144b-29f7-4b60-9c6c-3d375f5edaff",
+   "metadata": {},
+   "source": [
+    "## Training Configuration\n",
+    "\n",
+    "The model is trained using the Adam optimiser and CrossEntropy loss.\n",
+    "All hyperparameters are identical to those used in other activation\n",
+    "function experiments.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 44,
    "id": "a6d918a1-df53-41a5-9cec-0f7c712f0275",
@@ -309,6 +374,17 @@
     "\n",
     "criterion = nn.CrossEntropyLoss()\n",
     "optimizer = optim.Adam(data.parameters(), lr=0.01)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "980c435a-0fb1-4bc9-bd74-9a805c886774",
+   "metadata": {},
+   "source": [
+    "## Training Loop\n",
+    "\n",
+    "Both training and validation loss and accuracy are recorded at each epoch\n",
+    "to analyse learning behaviour.\n"
    ]
   },
   {
@@ -335,15 +411,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "id": "f62ced23-227a-415b-9db5-0de956a061d4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2025-12-18T22:46:11.261795Z",
-     "iopub.status.busy": "2025-12-18T22:46:11.260869Z",
-     "iopub.status.idle": "2025-12-18T22:52:53.251249Z",
-     "shell.execute_reply": "2025-12-18T22:52:53.247544Z",
-     "shell.execute_reply.started": "2025-12-18T22:46:11.261729Z"
+     "iopub.execute_input": "2025-12-18T23:23:06.344595Z",
+     "iopub.status.busy": "2025-12-18T23:23:06.343555Z",
+     "iopub.status.idle": "2025-12-18T23:25:04.264196Z",
+     "shell.execute_reply": "2025-12-18T23:25:04.261517Z",
+     "shell.execute_reply.started": "2025-12-18T23:23:06.344536Z"
     },
     "tags": []
    },
@@ -352,26 +428,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/20, Train Loss: 2.3501, Val Loss: 2.6227, Val Acc: 0.0960\n",
-      "Epoch 2/20, Train Loss: 2.6133, Val Loss: 2.4324, Val Acc: 0.0960\n",
-      "Epoch 3/20, Train Loss: 2.4236, Val Loss: 2.3369, Val Acc: 0.1000\n",
-      "Epoch 4/20, Train Loss: 2.3309, Val Loss: 2.3254, Val Acc: 0.0965\n",
-      "Epoch 5/20, Train Loss: 2.3224, Val Loss: 2.3272, Val Acc: 0.0965\n",
-      "Epoch 6/20, Train Loss: 2.3269, Val Loss: 2.3258, Val Acc: 0.0965\n",
-      "Epoch 7/20, Train Loss: 2.3273, Val Loss: 2.3214, Val Acc: 0.1030\n",
-      "Epoch 8/20, Train Loss: 2.3241, Val Loss: 2.3161, Val Acc: 0.1020\n",
-      "Epoch 9/20, Train Loss: 2.3193, Val Loss: 2.3117, Val Acc: 0.1020\n",
-      "Epoch 10/20, Train Loss: 2.3148, Val Loss: 2.3084, Val Acc: 0.1020\n",
-      "Epoch 11/20, Train Loss: 2.3113, Val Loss: 2.3064, Val Acc: 0.1020\n",
-      "Epoch 12/20, Train Loss: 2.3087, Val Loss: 2.3050, Val Acc: 0.1020\n",
-      "Epoch 13/20, Train Loss: 2.3069, Val Loss: 2.3041, Val Acc: 0.1060\n",
-      "Epoch 14/20, Train Loss: 2.3054, Val Loss: 2.3034, Val Acc: 0.1060\n",
-      "Epoch 15/20, Train Loss: 2.3043, Val Loss: 2.3030, Val Acc: 0.1060\n",
-      "Epoch 16/20, Train Loss: 2.3035, Val Loss: 2.3026, Val Acc: 0.1060\n",
-      "Epoch 17/20, Train Loss: 2.3028, Val Loss: 2.3024, Val Acc: 0.1060\n",
-      "Epoch 18/20, Train Loss: 2.3023, Val Loss: 2.3023, Val Acc: 0.0970\n",
-      "Epoch 19/20, Train Loss: 2.3020, Val Loss: 2.3023, Val Acc: 0.0960\n",
-      "Epoch 20/20, Train Loss: 2.3017, Val Loss: 2.3022, Val Acc: 0.0960\n"
+      "Epoch 1/20, Train Loss: 2.3014, Val Loss: 2.3025, Val Acc: 0.0960\n",
+      "Epoch 2/20, Train Loss: 2.3014, Val Loss: 2.3027, Val Acc: 0.0960\n",
+      "Epoch 3/20, Train Loss: 2.3014, Val Loss: 2.3028, Val Acc: 0.0960\n",
+      "Epoch 4/20, Train Loss: 2.3014, Val Loss: 2.3028, Val Acc: 0.0960\n",
+      "Epoch 5/20, Train Loss: 2.3013, Val Loss: 2.3028, Val Acc: 0.0960\n",
+      "Epoch 6/20, Train Loss: 2.3011, Val Loss: 2.3025, Val Acc: 0.0980\n",
+      "Epoch 7/20, Train Loss: 2.3008, Val Loss: 2.3020, Val Acc: 0.1220\n",
+      "Epoch 8/20, Train Loss: 2.3004, Val Loss: 2.3013, Val Acc: 0.1490\n",
+      "Epoch 9/20, Train Loss: 2.2996, Val Loss: 2.3003, Val Acc: 0.1050\n",
+      "Epoch 10/20, Train Loss: 2.2986, Val Loss: 2.2987, Val Acc: 0.0935\n",
+      "Epoch 11/20, Train Loss: 2.2971, Val Loss: 2.2966, Val Acc: 0.0960\n",
+      "Epoch 12/20, Train Loss: 2.2950, Val Loss: 2.2937, Val Acc: 0.0960\n",
+      "Epoch 13/20, Train Loss: 2.2921, Val Loss: 2.2899, Val Acc: 0.0960\n",
+      "Epoch 14/20, Train Loss: 2.2884, Val Loss: 2.2852, Val Acc: 0.0960\n",
+      "Epoch 15/20, Train Loss: 2.2840, Val Loss: 2.2796, Val Acc: 0.0960\n",
+      "Epoch 16/20, Train Loss: 2.2788, Val Loss: 2.2726, Val Acc: 0.0960\n",
+      "Epoch 17/20, Train Loss: 2.2725, Val Loss: 2.2632, Val Acc: 0.1195\n",
+      "Epoch 18/20, Train Loss: 2.2640, Val Loss: 2.2512, Val Acc: 0.1070\n",
+      "Epoch 19/20, Train Loss: 2.2532, Val Loss: 2.2375, Val Acc: 0.1070\n",
+      "Epoch 20/20, Train Loss: 2.2405, Val Loss: 2.2227, Val Acc: 0.1115\n"
      ]
     }
    ],
@@ -491,23 +567,60 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4bb5b4f9-eb4f-4f93-9161-89dea1b9c802",
+   "metadata": {},
+   "source": [
+    "## Results Interpretation\n",
+    "\n",
+    "The CNN using Sigmoid activation fails to learn meaningful features,\n",
+    "achieving a validation accuracy close to **random guessing (~10%)**.\n",
+    "\n",
+    "This behaviour is expected due to the **vanishing gradient problem** associated\n",
+    "with Sigmoid activations. As neuron inputs grow large in magnitude, the Sigmoid\n",
+    "function saturates, producing near-zero gradients. This prevents effective\n",
+    "weight updates in deeper layers, causing training to stall.\n",
+    "\n",
+    "The loss remains close to 2.30, which corresponds to the expected loss of a\n",
+    "random classifier across 10 classes.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "66d3c387-5ca5-49ef-a71d-bb527d24b5bb",
    "metadata": {},
    "source": [
-    "## Results: Sigmoid Activation\n",
+    "## Comparison with Other Activation Functions\n",
     "\n",
-    "The model trained with Sigmoid activation shows very slow convergence.\n",
-    "The training loss remains close to the theoretical maximum for multi-class\n",
-    "classification, and validation accuracy remains close to random guessing (~10%).\n",
+    "Compared to ReLU and LeakyReLU:\n",
+    "- Sigmoid converges significantly more slowly\n",
+    "- Gradients vanish in deeper layers\n",
+    "- Classification accuracy remains near chance level\n",
     "\n",
-    "This behaviour is consistent with the vanishing gradient problem associated\n",
-    "with Sigmoid activations in deeper networks.\n"
+    "These results empirically confirm why Sigmoid is no longer used in modern\n",
+    "deep CNN architectures.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "555f411d-c5d1-47e6-9b93-51262bb9deea",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "This experiment demonstrates that Sigmoid activation is unsuitable for\n",
+    "convolutional neural networks due to vanishing gradients and poor learning\n",
+    "dynamics.\n",
+    "\n",
+    "When compared with ReLU and LeakyReLU, Sigmoid performs substantially worse,\n",
+    "highlighting the importance of activation function choice in deep learning\n",
+    "model design.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7f0abdb-b5ad-4610-8467-ccb6daf88c6d",
+   "id": "ff93c8d8-9821-4f17-aaae-41cb8f60048f",
    "metadata": {},
    "outputs": [],
    "source": []
